--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "@vue/cli": "^4.5.13",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "mongoose": "^5.13.5"
+    "mongoose": "^5.13.5",
+    "vue-router": "^3.5.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.12"
